// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withDefaultProps will return a component with merged props taking a function as defaultProps 1`] = `
<DocumentFragment>
  <div>
    {
  "overrides": {
    "stylePreset": "linkStandalone",
    "typographyPreset": "utilityLabel020"
  },
  "functionMock": "props",
  "test": "props"
}
  </div>
</DocumentFragment>
`;

exports[`withDefaultProps will return a component with merged props taking an object as defaultProps 1`] = `
<DocumentFragment>
  <div>
    {
  "overrides": {
    "stylePreset": "linkStandalone",
    "typographyPreset": "utilityLabel020"
  },
  "test": "prop"
}
  </div>
</DocumentFragment>
`;

exports[`withDefaultProps will return a component with merged props taking undefined as defaultProps 1`] = `
<DocumentFragment>
  <div>
    {
  "overrides": {
    "stylePreset": "linkStandalone",
    "typographyPreset": "utilityLabel020"
  }
}
  </div>
</DocumentFragment>
`;
